@@ -1,4 +1,4 @@
-#
+#!iocSpecificRelease/bin/linuxRT_glibc-x86_64/fastFeedback
 # st.cmd file for Fast Feedback Controller IOC
 # Note: contains parameters specific to vioc-ltu1-tr01 and
 #       and calls generic st.cmd common to all feedback loops 
@@ -28,7 +28,7 @@ epicsEnvSet("EPICS_IOC_LOG_CLIENT_INET","${VIOC}")
 #======================================================================
 ## iocAdmin environment variables
 #=====================================================================
-epicsEnvSet("ENGINEER","A.Babbitt")
+epicsEnvSet("ENGINEER","J.Mock")
 epicsEnvSet("LOCATION","cpu-sys0-fb01")
 
 #========================================================================
@@ -82,6 +82,6 @@ epicsEnvSet("IOCSH_PS1","epics@${VIOC}>")
 # ====================================================================
 dbLoadDatabase("dbd/fastFeedback.dbd")
 fastFeedback_registerRecordDeviceDriver(pdbbase)
-<iocBoot/common/st-off.cmd
+<iocBoot/common/st.cmd
 
 #Done  
